--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+.font link {
+  font-family: "Calistoga", serif;
+  font-weight: 400;
+  font-style: normal;
+
 }
+
+ 
+
+
