landing and dashboard page

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
     monospace;
 } */
 
-.font link {
+.font-link {
   font-family: "Calistoga", serif;
   font-weight: 400;
   font-style: normal;
